// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SToast.vue can have a clickable action 1`] = `
<transition-stub name="fade">
  <div class="toast" style="">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        Text
      </div>
    </div> <button class="toast__action">
      OK
    </button>
  </div>
</transition-stub>
`;

exports[`SToast.vue can have action text configured 1`] = `
<transition-stub name="fade">
  <div class="toast" style="">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        Text
      </div>
    </div> <button class="toast__action">
      action text
    </button>
  </div>
</transition-stub>
`;

exports[`SToast.vue can have position  1`] = `
<transition-stub name="fade">
  <div class="toast" style="">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        Text
      </div>
    </div>
    <!---->
  </div>
</transition-stub>
`;

exports[`SToast.vue can have position center 1`] = `
<transition-stub name="fade">
  <div class="toast toast--center" style="">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        Text
      </div>
    </div>
    <!---->
  </div>
</transition-stub>
`;

exports[`SToast.vue can have position right 1`] = `
<transition-stub name="fade">
  <div class="toast toast--right" style="">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        Text
      </div>
    </div>
    <!---->
  </div>
</transition-stub>
`;

exports[`SToast.vue can have the icon hidden 1`] = `
<transition-stub name="fade">
  <div class="toast" style="">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        Text
      </div>
    </div>
    <!---->
  </div>
</transition-stub>
`;

exports[`SToast.vue closes on action click 1`] = `
<transition-stub name="fade">
  <div class="toast" style="display: none;">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        Text
      </div>
    </div> <button class="toast__action">
      OK
    </button>
  </div>
</transition-stub>
`;

exports[`SToast.vue renders toast type  correctly 1`] = `
<div class="toast" style="display: none;">
  <!---->
  <div class="toast__text">
    <!---->
    <div class="toast__body">
      Text
    </div>
  </div>
  <!---->
</div>
`;

exports[`SToast.vue renders toast type error correctly 1`] = `
<div class="toast toast--error" style="display: none;">
  <div class="toast__icon"><svg viewBox="0 0 24 24" class="icon icon--color-red" aria-hidden="true">
      <circle cx="12" cy="12" r="10"></circle>
      <line x1="12" y1="8" x2="12" y2="12"></line>
      <line x1="12" y1="16" x2="12.01" y2="16"></line>
    </svg></div>
  <div class="toast__text">
    <!---->
    <div class="toast__body">
      Text
    </div>
  </div>
  <!---->
</div>
`;

exports[`SToast.vue renders toast type success correctly 1`] = `
<div class="toast toast--success" style="display: none;">
  <div class="toast__icon"><svg viewBox="0 0 24 24" class="icon icon--color-green" aria-hidden="true">
      <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
      <polyline points="22 4 12 14.01 9 11.01"></polyline>
    </svg></div>
  <div class="toast__text">
    <!---->
    <div class="toast__body">
      Text
    </div>
  </div>
  <!---->
</div>
`;

exports[`SToast.vue renders toast type warning correctly 1`] = `
<div class="toast toast--warning" style="display: none;">
  <div class="toast__icon"><svg viewBox="0 0 24 24" class="icon icon--color-gold" aria-hidden="true">
      <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path>
      <line x1="12" y1="9" x2="12" y2="13"></line>
      <line x1="12" y1="17" x2="12.01" y2="17"></line>
    </svg></div>
  <div class="toast__text">
    <!---->
    <div class="toast__body">
      Text
    </div>
  </div>
  <!---->
</div>
`;

exports[`SToast.vue requires a title or body 1`] = `
<transition-stub name="fade">
  <div class="toast" style="display: none;">
    <!---->
    <div class="toast__text">
      <!---->
      <div class="toast__body">
        text
      </div>
    </div>
    <!---->
  </div>
</transition-stub>
`;

exports[`SToast.vue requires a title or body 2`] = `
<transition-stub name="fade">
  <div class="toast" style="display: none;">
    <!---->
    <!---->
    <!---->
  </div>
</transition-stub>
`;
